add new corporate file and create logo in corporate file

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <p><a href="travel.html" class="para">Travel</a></p>
                   </td>
                   <td>
-                    <p></p>
+                    <p><a href="corporate.html" class="para">Corporate</a></p>
                   </td>
                 </tr>
                 <tr>
