--- a/corporate.html
+++ b/corporate.html
@@ -260,7 +260,29 @@
             </td>
           </tr>
 
+          <!-- Main Row - 2: START -->
+          <tr>
+            <td class="row2">
+              <table valign="middle" cellpadding="0" cellspacing="0" padding="0" width="100%">
+                <tr>
+                  <td style="height: 400px; background: rgba(0, 0, 0, 0.4) url(https://imgur.com/1ebW5pR.png) no-repeat top center/cover;">
+                    <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%">
+                      <tr>
+                        <td style="height: 280px; background: rgba(0, 0, 0, 0.4); padding: 60px;">
+                          <h2>We Create Modern Website</h2>
+                          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                          <img src="https://imgur.com/Ep3Okld.png" alt="" width="60px">
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 2: END -->
 
+          
 
         </table>
       </div>
