add two table our services and business strategy as well as img

--- a/corporate.html
+++ b/corporate.html
@@ -282,7 +282,61 @@
           </tr>
           <!-- Main Row - 2: END -->
 
+                    <!-- Main Row - 3: START -->
+                    <tr>
+                      <td class="row3 section-padding">
+                        <table valign="middle" cellspacing="0" cellpadding="0" border="0" width="100%" style="table-layout: fixed;" class="table-fixed-auto2">
+                          <tr>
+                            <td style="padding: 0 10px; line-height: 1.8;" colspan="3">
+                              <h2 class="common-heading">OUR SERVICES</h2>
+                              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="background: rgba(0,0,0,.03); line-height: 1.8;" class="row3-td table-width">
+                              <div class="row3-div">
+                                <h3>Branding</h3>
+                                <p>Far far away, behind the word mountains, far from the countries</p>
+                              </div>
+                            </td>
+                            <td style="background: rgba(0,0,0,.08); line-height: 1.8;" class="row3-td table-width">
+                              <div class="row3-div">
+                                <h3>Design</h3>
+                                <p>Far far away, behind the word mountains, far from the countries</p>
+                              </div>
+                            </td>
+                            <td style="background: rgba(0,0,0,.03); line-height: 1.8;" class="row3-td table-width">
+                              <div class="row3-div">
+                                <h3>Development</h3>
+                                <p>Far far away, behind the word mountains, far from the countries</p>
+                              </div>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                    <!-- Main Row - 3: END -->
           
+                    <!-- Main Row - 4: START -->
+                    <tr>
+                      <td class="section-padding light-bgc">
+                        <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-auto">
+                          <tr>
+                            <td class="mob-full-width table-width">
+                              <img src="https://imgur.com/JgDRiu6.jpg" alt="" style="width: 100%; display: block;">
+                            </td>
+                            <td valign="top" class="mob-full-width td-p table-width">
+                              <div class="row4-td center">
+                                <h2 class="common-heading">BUSINESS STRATEGY</h2>
+                                <p style="line-height: 1.8;">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                                <a href="#" class="btn">Read more</a>
+                              </div>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                    <!-- Main Row - 4: END -->
 
         </table>
       </div>
