add tables like projects, our blog, our team, our featuers and footer table

--- a/corporate.html
+++ b/corporate.html
@@ -282,61 +282,300 @@
           </tr>
           <!-- Main Row - 2: END -->
 
-                    <!-- Main Row - 3: START -->
-                    <tr>
-                      <td class="row3 section-padding">
-                        <table valign="middle" cellspacing="0" cellpadding="0" border="0" width="100%" style="table-layout: fixed;" class="table-fixed-auto2">
-                          <tr>
-                            <td style="padding: 0 10px; line-height: 1.8;" colspan="3">
-                              <h2 class="common-heading">OUR SERVICES</h2>
-                              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          <!-- Main Row - 3: START -->
+          <tr>
+            <td class="row3 section-padding">
+              <table valign="middle" cellspacing="0" cellpadding="0" border="0" width="100%" style="table-layout: fixed;" class="table-fixed-auto2">
+                <tr>
+                  <td style="padding: 0 10px; line-height: 1.8;" colspan="3">
+                    <h2 class="common-heading">OUR SERVICES</h2>
+                    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="background: rgba(0,0,0,.03); line-height: 1.8;" class="row3-td table-width">
+                    <div class="row3-div">
+                      <h3>Branding</h3>
+                      <p>Far far away, behind the word mountains, far from the countries</p>
+                    </div>
+                  </td>
+                  <td style="background: rgba(0,0,0,.08); line-height: 1.8;" class="row3-td table-width">
+                    <div class="row3-div">
+                      <h3>Design</h3>
+                      <p>Far far away, behind the word mountains, far from the countries</p>
+                    </div>
+                  </td>
+                  <td style="background: rgba(0,0,0,.03); line-height: 1.8;" class="row3-td table-width">
+                    <div class="row3-div">
+                      <h3>Development</h3>
+                      <p>Far far away, behind the word mountains, far from the countries</p>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 3: END -->
+
+          <!-- Main Row - 4: START -->
+          <tr>
+            <td class="section-padding light-bgc">
+              <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-auto">
+                <tr>
+                  <td class="mob-full-width table-width">
+                    <img src="https://imgur.com/JgDRiu6.jpg" alt="" style="width: 100%; display: block;">
+                  </td>
+                  <td valign="top" class="mob-full-width td-p table-width">
+                    <div class="row4-td center">
+                      <h2 class="common-heading">BUSINESS STRATEGY</h2>
+                      <p style="line-height: 1.8;">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                      <a href="#" class="btn">Read more</a>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 4: END -->
+
+            <!-- Main Row - 5: START -->
+            <tr>
+              <td style="padding: 27.5px;">
+                <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-atuo">
+                  <tr>
+                    <td colspan="2" style="padding: 0 40px; line-height: 1.8;">
+                      <h2 class="common-heading">PROJECTS</h2>
+                      <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="table-width">
+                      <img src="https://imgur.com/52q2zrx.jpg" alt="" style="max-width: 100%; display: block;">
+                    </td>
+                    <td class="table-width">
+                      <img src="https://imgur.com/swRGmWA.jpg" alt="" style="max-width: 100%; display: block;">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="table-width">
+                      <img src="https://imgur.com/4wQToka.jpg" alt="" style="max-width: 100%; display: block;">
+                    </td>
+                    <td class="table-width">
+                      <img src="https://imgur.com/Rk6FqWc.jpg" alt="" style="max-width: 100%; display: block;">
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- Main Row - 5: END -->
+
+            <!-- Main Row - 6: START -->
+            <tr>
+              <td class="row4">
+                <table valign="middle" cepadding="0" cellpadding="0" border="0" width="100%">
+                  <tr>
+                    <td style="background: url(https://imgur.com/1ebW5pR.jpg) no-repeat top center/cover; height: 200px;">
+                      <table valign="middle" cepadding="0" cellpadding="0" border="0" width="100%">
+                        <tr>
+                          <td style="background: rgba(0, 0, 0, 0.4); height: 200px;">
+                            <table class="business-tbl" valign="middle" cepadding="0" cellpadding="0" border="0" width="100%" style="height: 200px; table-layout: fixed;">
+                              <tr>
+                                <td class="table-width mob-full-width">
+                                  <h2>20</h2>
+                                  <P>Clients</P>
+                                </td>
+                                <td class="table-width mob-full-width">
+                                  <h2>1200</h2>
+                                  <P>Projects</P>
+                                </td>
+                                <td class="table-width mob-full-width">
+                                  <h2>100</h2>
+                                  <P>Coffee Cups</P>
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- Main Row - 6: END -->
+
+            <!-- Main Row - 7: START -->
+            <tr>
+              <td style="padding: 37.5px 27.5px;">
+                <table valign="top" cellspacing="0" cellpadding="0" border="0" width="100%" class="table-fixed-auto">
+                  <tr>
+                    <td colspan="2" style="padding: 0 20px;">
+                      <h2 class="common-heading">OUR BLOG</h2>
+                      <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="padding: 0 10px; text-align: left;" class="table-width center">
+                      <img src="https://imgur.com/NUDcpBX.jpg" alt="" style="width: 100%; display: block; margin-bottom: 30px;">
+                      <p>POSTED ON FEB 18, 2019 FOOD</p>
+                      <h3 style="color: #000;">Business Key to Success</h3>
+                      <p>Far far away, behind the word mountains, far from the countries</p>
+                      <a href="" class="btn mar-bottom">Read more</a>
+                    </td>
+                    <td style="padding: 0 10px; text-align: left;" class="table-width center">
+                      <img src="https://imgur.com/sNtHWwq.jpg" alt="" style="width: 100%; display: block; margin-bottom: 30px;">
+                      <p>POSTED ON FEB 18, 2019 FOOD</p>
+                      <h3 style="color: #000;">Web Design Technique</h3>
+                      <p>Far far away, behind the word mountains, far from the countries</p>
+                      <a href="" class="btn">Read more</a>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- Main Row - 7: END -->
+
+            <!-- Main Row - 8: START -->
+            <tr>
+              <td class="section-padding" style="border-top: 1px solid #f2f2f2; border-bottom: 1px solid #f2f2f2;">
+                <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-auto">
+                  <tr>
+                    <td colspan="3" style="padding: 0 10px;">
+                      <h2 class="common-heading">OUR TEAM</h2>
+                      <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="padding: 0 10px;" class="table-width">
+                      <img src="https://imgur.com/FJ8Rr1T.jpg" alt="" style="width: 100%; display: block;">
+                      <h3 style="color: rgb(0,0,0); font-size: 18px;">Ronald Tuff</h3>
+                      <p style="font-size: 15px;">Businessman</p>
+                      <p style="font-size: 16px;">Far far away, behind the word mountains</p>
+                    </td>
+                    <td style="padding: 0 10px;" class="table-width">
+                      <img src="https://imgur.com/4QIjuLi.jpg" alt="" style="width: 100%; display: block;">
+                      <h3 style="color: rgb(0,0,0); padding: 0 5px; font-size: 18px;">Willam Clarson</h3>
+                      <p style="font-size: 15px;">Businessman</p>
+                      <p style="font-size: 16px;">Far far away, behind the word mountains</p>
+                    </td>
+                    <td style="padding: 0 10px;" class="table-width">
+                      <img src="https://i.imgur.com/SlAjQut.jpg" alt="" style="width: 100%; display: block;">
+                      <h3 style="color: rgb(0,0,0); padding: 0 5px; font-size: 18px;">Willam Clarson</h3>
+                      <p style="font-size: 15px;">Businessman</p>
+                      <p style="font-size: 16px;"s>Far far away, behind the word mountains</p>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- Main Row - 8: END -->
+
+            <!-- Main Row - 9: START -->
+            <tr>
+              <td class="section-padding">
+                <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" style="table-layout: fixed;">
+                  <tr>
+                    <td valign="top" width="45%" class="table-width row9img" >
+                    <img src="https://imgur.com/YBJr1Cw.jpg" alt="" width="100%" style="display: block;">
+                    </td>
+                    <td style="text-align: left;" class="table-width center mar-top">
+                      <h2 class="common-heading" style="padding-left: 20px;">OUR FEATURES</h2>
+                      <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                          <div class="table-width mob-full-width">
+                            <td valign="top" width="25%" style="padding-left: 20px;"><img src="https://imgur.com/iiSINgf.png" alt="" width="50px" style="display: block;"></td>
+                            <td>
+                              <h2 style="color: #000000; padding: 0 10px; font-size: 15px;">Responsive</h2>
+                              <p style="color: rgba(0, 0, 0, 0.4); font-size: 15px; padding: 0 10px; line-height: 1.8">A small river named Duden flows by their</p>
                             </td>
-                          </tr>
-                          <tr>
-                            <td style="background: rgba(0,0,0,.03); line-height: 1.8;" class="row3-td table-width">
-                              <div class="row3-div">
-                                <h3>Branding</h3>
-                                <p>Far far away, behind the word mountains, far from the countries</p>
-                              </div>
+                          </div>
+                        </tr>
+                        <tr>
+                          <div class="table-width mob-full-width">
+                            <td valign="top" width="25%" style="padding-left: 20px;"><img src="https://imgur.com/iiSINgf.png" alt="" width="50px%" style="display: block;"></td>
+                            <td>
+                              <h2 style="color: #000000; padding: 0 10px; font-size: 15px;">Responsive</h2>
+                              <p style="color: rgba(0, 0, 0, 0.4); font-size: 15px; padding: 0 10px; line-height: 1.8">A small river named Duden flows by their</p>
                             </td>
-                            <td style="background: rgba(0,0,0,.08); line-height: 1.8;" class="row3-td table-width">
-                              <div class="row3-div">
-                                <h3>Design</h3>
-                                <p>Far far away, behind the word mountains, far from the countries</p>
-                              </div>
+                          </div>
+                        </tr>
+                        <tr>
+                          <div class="table-width mob-full-width">
+                            <td valign="top" width="25%" style="padding-left: 20px;"><img src="https://imgur.com/iiSINgf.png" alt="" width="50px%" style="display: block;"></td>
+                            <td>
+                              <h2 style="color: #000000; padding: 0 10px; font-size: 15px;">Responsive</h2>
+                              <p style="color: rgba(0, 0, 0, 0.4); font-size: 15px; padding: 0 10px; line-height: 1.8">A small river named Duden flows by their</p>
                             </td>
-                            <td style="background: rgba(0,0,0,.03); line-height: 1.8;" class="row3-td table-width">
-                              <div class="row3-div">
-                                <h3>Development</h3>
-                                <p>Far far away, behind the word mountains, far from the countries</p>
-                              </div>
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                    <!-- Main Row - 3: END -->
-          
-                    <!-- Main Row - 4: START -->
-                    <tr>
-                      <td class="section-padding light-bgc">
-                        <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-auto">
-                          <tr>
-                            <td class="mob-full-width table-width">
-                              <img src="https://imgur.com/JgDRiu6.jpg" alt="" style="width: 100%; display: block;">
-                            </td>
-                            <td valign="top" class="mob-full-width td-p table-width">
-                              <div class="row4-td center">
-                                <h2 class="common-heading">BUSINESS STRATEGY</h2>
-                                <p style="line-height: 1.8;">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                                <a href="#" class="btn">Read more</a>
-                              </div>
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                    <!-- Main Row - 4: END -->
+                          </div>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- Main Row - 9: END -->
+
+            <!-- Main Row - 10: START -->
+            <tr>
+              <td class="section-padding" style="background: #0d0cb5; color: #ffffff;">
+                <table>
+                  <tr>
+                    <td>
+                      <h2 class="common-heading" style="color: #ffffff; line-height: 1.8">GET READY FOR MODERN DESIGN</h2>
+                      <p style="line-height: 1.8">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                      <a href="" class="btn">Get Started</a>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- Main Row - 10: END -->
+
+            <!-- Main Row - 11: START -->
+            <tr>
+              <td class="section-padding" style="text-align: left; background-color: rgb(0, 0, 0)">
+                <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" style="table-layout: fixed;">
+                  <tr>
+                    <td valign="top" style="padding: 0 3px;" class="table-width center">
+                      <h2 style="color: #ffffff; font-size: 20px;">About</h2>
+                      <p style="line-height: 1.8; color: rgba(255, 255, 255, 0.5);">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                    </td>
+                    <td valign="top" style="padding: 0 3px;" class="table-width center">
+                      <h2 style="color: #ffffff; font-size: 20px;">Contact Info</h2>
+                      <p style="line-height: 1.8; color: rgba(255, 255, 255, 0.5);">203 Fake St. Mountain View, San Francisco, California, USA</p>
+                      <p style="line-height: 1.8; color: rgba(255, 255, 255, 0.5);">+2 392 3929 210</p>
+                    </td>
+                    <td valign="top" style="padding: 0 3px;" class="table-width center">
+                      <h2 style="color: #ffffff; font-size: 20px;">Useful Links</h2>
+                      <p><a href="" style="color: #ffffff; font-size: 15px;">Home</a></p>
+                      <p><a href="" style="color: #ffffff; font-size: 15px;">About</a></p>
+                      <p><a href="" style="color: #ffffff; font-size: 15px;">Services</a></p>
+                      <p><a href="" style="color: #ffffff; font-size: 15px;">Work</a></p>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- Main Row - 11: END -->
+
+            <!-- Main Row - 12: START -->
+            <tr>
+              <td class="section-padding" style="background-color: rgb(0, 0, 0); color: rgba(255, 255, 255, 0.5);">
+                <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" style="table-layout: fixed;">
+                  <tr>
+                    <td style="text-align: left;" valign="top" class="table-width center">
+                      <p>© 2018 Corporate. All Rights</p>
+                      <p>Reserved</p>
+                    </td>
+                    <td style="text-align: right" valign="top" class="table-width center">
+                      <p>Unsubcribe</p>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          <!-- Main Row - 12: END --> 
 
         </table>
       </div>
