table outline hide

--- a/corporate.html
+++ b/corporate.html
@@ -47,7 +47,7 @@
     <!-- CSS Main : START -->
     <style>
       * {
-        outline: 1px  solid limegreen;
+/*         outline: 1px  solid limegreen; */
         /*background: rgb(0 100 0 / 0.1);*/
       }
 
