--- a/travel.html
+++ b/travel.html
@@ -30,7 +30,7 @@
 <!--     CSS Main : START -->
     <style>
       * {
-                  outline: 1px solid limegreen;
+                  /* outline: 1px solid limegreen; */
         /*          background: rgb(0 100 0 / 0.1);*/
       }
 
