add new file real-estate

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <p><a href="real-estate.html" class="para">Real Estate</a></p>
                   </td>
                   <td>
-                    
+                    <p><a href=""></a></p>
                   </td>
                 </tr>
                 <tr>
