add our services table

--- a/real-estate.html
+++ b/real-estate.html
@@ -397,6 +397,219 @@
           </tr>
           <!-- Main Row - 3: END -->
 
+          <!-- Main Row - 4: START -->
+          <tr>
+            <td style="padding: 2em 2em 4em; background-color: #fff;">
+              <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%">
+                <tr>
+                  <td>
+                    <h2 class="heading2" style="border: 1px solid #fff;">Buy House in Best Price</h2>
+                    <p class="para2">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                    <a href="" class="btn2">Browse Properties</a>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 4: END -->
+
+          <tr>
+            <td style="padding: 2.5em; background-color: #fafafa;">
+              <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-auto">
+                <tr>
+                  <td colspan="2" style="padding: 0 30px;" class="table-block">
+                    <h2 class="section-heading">Our Services</h2>
+                    <p class="para3">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td valign="top" style="padding-top: 20px;" class="table-block table-full-width">
+                    <img src="https://imgur.com/NuENz3A.png" alt="a" style="width: 100px; max-width: 600px; height: auto; margin: auto; background-size: cover; display: block;">
+                    <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%">
+                      <tr>
+                        <td style="padding: 10px 10px 0;">
+                          <h3 class="name">Layout</h3>
+                          <p class="para3">Far far away, behind the word mountains, far from the countries</p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                  <td valign="top" style="padding-top: 20px;" class="table-block table-full-width">
+                    <img src="https://imgur.com/haUKioD.png" alt="a" style="width: 100px; max-width: 600px; height: auto; margin: auto; background-size: cover; display: block;">
+                    <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%">
+                      <tr>
+                        <td style="padding: 10px 10px 0;">
+                          <h3 class="name">Layout</h3>
+                          <p class="para3">Far far away, behind the word mountains, far from the countries</p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 5: END -->
+
+          <!-- Main Row - 6: START -->
+          <tr>
+            <td style="padding: 2.5em; background: #fff;">
+              <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-auto">
+                <tr>
+                  <td colspan="2" class="table-block">
+                    <h2 class="section-heading">Properties For Sale</h2>
+                    <p class="para3">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="table-block pad1">
+                    <img src="https://imgur.com/W9HRaDJ.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; background-size: cover; display: block;">
+                    <div style="padding: 10px 0; border: 1px solid rgba(0,0,0,.08);">
+                      <h3 class="name" style="margin-bottom: 0;">Residential House</h3>
+                      <span class="para3">100 sqft 2 Bed 2 bath</span>
+                      <h4 class="para3" style="color: #000; font-size: 18px;">$1,000,000</h4>
+                      <p class="para3">Far far away, behind the word mountains, far from the countries</p>
+                    </div>
+                  </td>
+                  <td class="table-block pad2">
+                    <img src="https://imgur.com/BZvk6H2.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; background-size: cover; display: block;">
+                    <div style="padding: 10px 0; border: 1px solid rgba(0,0,0,.08);">
+                     <h3 class="name" style="margin-bottom: 0;">Residential House</h3>
+                     <span class="para3">100 sqft 2 Bed 2 bath</span>
+                     <h4 class="para3" style="color: #000; font-size: 18px;">$1,000,000</h4>
+                     <p class="para3">Far far away, behind the word mountains, far from the countries</p>
+                   </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="table-block pad1">
+                    <img src="https://imgur.com/jhHdmCY.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; background-size: cover; display: block;">
+                    <div style="padding: 10px 0; border: 1px solid rgba(0,0,0,.08);">
+                      <h3 class="name" style="margin-bottom: 0;">Residential House</h3>
+                      <span class="para3">100 sqft 2 Bed 2 bath</span>
+                      <h4 class="para3" style="color: #000; font-size: 18px;">$1,000,000</h4>
+                      <p class="para3">Far far away, behind the word mountains, far from the countries</p>
+                    </div>
+                  </td>
+                  <td class="table-block pad2">
+                    <img src="https://imgur.com/wWPBRwd.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; background-size: cover; display: block;">
+                    <div style="padding: 10px 0; border: 1px solid rgba(0,0,0,.08);">
+                      <h3 class="name" style="margin-bottom: 0;">Residential House</h3>
+                      <span class="para3">100 sqft 2 Bed 2 bath</span>
+                      <h4 class="para3" style="color: #000; font-size: 18px;">$1,000,000</h4>
+                      <p class="para3">Far far away, behind the word mountains, far from the countries</p>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 6: END -->
+
+          <!-- Main Row - 7: START -->
+          <tr>
+            <td style="background: url(https://imgur.com/wc2OaIO.jpg); height: 200px; background-size: cover; background-position: center center;">
+              <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%">
+                <tr>
+                  <td style="background-color: rgba(0,0,0,.3); height: 200px;">
+                    <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%">
+                      <tr>
+                        <td class="table-block">
+                          <h3 class="num">200</h3>
+                          <p class="para4">Agents</p>
+                        </td>
+                        <td class="table-block">
+                          <h3 class="num">1200</h3>
+                          <p class="para4">happy Clients</p>
+                        </td>
+                        <td class="table-block">
+                          <h3 class="num">1000</h3>
+                          <p class="para4">Sold Properties</p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 7: END -->
+
+          <!-- Main Row - 8: START -->
+          <tr>
+            <td style="padding: 37.5px; background-color: #fff;">
+              <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%" >
+                <tr>
+                  <td valign="middle" style="padding: 10px 25px 0 10px;" class="table-block text-align1">
+                    <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%">
+                      <tr>
+                        <td>
+                          <h2 class="section-heading">Our Features</h2>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <h3 class="name">Responsive</h3>
+                          <p class="para3">A small river named Duden flows by their</p>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <h3 class="name">Modern Design</h3>
+                          <p class="para3">A small river named Duden flows by their</p>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <h3 class="name">Minimal Design</h3>
+                          <p class="para3">A small river named Duden flows by their</p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                  <td class="table-block">
+                    <img src="https://imgur.com/UDCFNEC.jpg" alt="" style="width: 100%; max-width: 600px; background-size: cover; display: block;">
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 8: END -->
+
+          <!-- Main Row - 9: START -->
+          <tr>
+            <td style="padding: 30px 0; background-color: #fff;">
+              <a href="" class="btn3">Start Browsing</a>
+            </td>
+          </tr>
+          <!-- Main Row - 9: END -->
+
+          <!-- Main Row - 10: START -->
+          <tr>
+            <td style="border: 1px solid rgba(0,0,0,.05); background: #fff;">
+              <table valign="middle" cellpadding="0" cellspacing="0" border="0" width="100%">
+                <tr>
+                  <td style="padding: 20px 0 1px 0;" class="table-width1 table-block">
+                    <h4 class="footer-heading">Stay Updated On Newest Properties</h4>
+                  </td>
+                  <td class="table-width2 table-block text-align2">
+                    <img src="https://imgur.com/u7GXGid.png" alt="" style="width: 25px; margin: 0;">
+                    <img src="https://imgur.com/wUJtqvH.png" alt="" style="width: 25px; margin: 0 10px;">
+                    <img src="https://imgur.com/lU03AUp.png" alt="" style="width: 25px; margin: 0;" class="pad3">
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- Main Row - 10: END -->
+
+          <!-- Main Row - 11: START -->
+          <tr>
+            <td style="background: #fafafa;">
+              <p class="para3">No longer want to receive these email? You can <span style="color: rgba(0,0,0,.8);">Unsubscribe here</span></p>
+            </td>
+          </tr>
+          <!-- Main Row - 11: END -->
           
         </table>
       </div>
