--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- CSS Reset : END -->
 
 
-    
+
     <style>
       /* CSS Main : START */
       * {
@@ -89,12 +89,21 @@
           <tr>
             <td style="padding: 25px 50px">
               <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-auto">
+
                 <tr>
                   <td>
-                    <p><a href="real-estate.html" class="para">Real Estate</a></p>
+                    <p><a href="romofyi.html"></a>Romofyi</p>
                   </td>
                   <td>
-                    <p><a href=""></a></p>
+                    <p><a href="" class="para"></a></p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p><a href="lawn-garden.html"></a>Lawn and Garden</p>
+                  </td>
+                  <td>
+                    <p><a href="real-estate.html" class="para">Real Estate</a></p>
                   </td>
                 </tr>
                 <tr>
