main page link style fix

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                 <tr>
                   <td>
-                    <p><a href="romofyi.html"></a>Romofyi</p>
+                    <p><a href="romofyi.html" class="para">Romofyi</a></p>
                   </td>
                   <td>
                     <p><a href="" class="para"></a></p>
@@ -100,7 +100,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <p><a href="lawn-garden.html"></a>Lawn and Garden</p>
+                    <p><a href="lawn-garden.html" class="para">Lawn and Garden</a></p>
                   </td>
                   <td>
                     <p><a href="real-estate.html" class="para">Real Estate</a></p>
